# gauze

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.rst  appveyor.yml  jenkins.sh
cmake/: Config.cmake.in  gauze_add_test.cmake  gauze_check_emulator_running.cmake  gauze_create_avd.cmake  gauze_get_all_dependencies.cmake  gauze_run_start_script.cmake  gauze_start_android_emulator.cmake  gauze_upload_config.cmake
cmake/templates/: AndroidTest.cmake.in  iOSTest.cmake.in  start-emulator.sh.in
docs/: Makefile  conf.py  index.rst  spelling.txt
docs/examples/: args.rst  deps.rst  directory.rst  forward_env.rst  gtest.rst  resource.rst  simple.rst
docs/prereq/: android.rst  ios.rst
lib/gauze/: CMakeLists.txt
lib/gauze/gauze/: CMakeLists.txt  gauze.cpp
test/gauze/: CMakeLists.txt
test/gauze/args/: CMakeLists.txt  main.cpp
test/gauze/deplib/: CMakeLists.txt  Deplib.cpp  Deplib.hpp
test/gauze/directory/: CMakeLists.txt  main.cpp
test/gauze/forward_env/: CMakeLists.txt  main.cpp
test/gauze/gtest/: CMakeLists.txt  main.cpp
test/gauze/resource/: CMakeLists.txt  main.cpp
test/gauze/resource/data/: input.txt
test/gauze/simple/: CMakeLists.txt  main.cpp
